SimplestCRUDExample-main/src/main/java/com/example/SimplestCRUDExample/Error/DatabaseOperationError.java
package com.example.SimplestCRUDExample.Error;

public class DatabaseOperationError extends RuntimeException {

    public DatabaseOperationError(String id) {
        super(id);
    }

}

